--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -1,5 +1,6 @@
 fastapi>=0.109.0
 uvicorn[standard]>=0.27.0
+gunicorn>=21.2.0
 google-cloud-storage>=2.14.0
 google-cloud-bigquery>=3.17.0
 google-cloud-aiplatform>=1.42.0
