--- a/yuki-app/package.json
+++ b/yuki-app/package.json
@@ -35,7 +35,8 @@
     "react-image-crop": "^11.0.10",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "tamagui": "^1.141.5"
   },
