fix: Dockerfile now runs server.py with all fixes
- Changed entrypoint from yuki_openai_server:app to server:app
- Added python-dotenv, langchain, langgraph to production requirements
- This deploys role alternation, multimodal handling, and structured outputs

--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -10,3 +10,8 @@ python-multipart>=0.0.9
 requests>=2.31.0
 Pillow>=10.0.0
 numpy>=1.26.0
+python-dotenv
+langchain-core
+langchain
+langchain-google-vertexai
+langgraph
