--- a/requirements_production.txt
+++ b/requirements_production.txt
@@ -4,6 +4,7 @@ gunicorn>=21.2.0
 google-cloud-storage>=2.14.0
 google-cloud-bigquery>=3.17.0
 google-cloud-aiplatform>=1.42.0
+google-cloud-vision>=3.5.0
 google-genai
 pydantic>=2.6.0
 python-multipart>=0.0.9
